--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,14 @@
   height: 0;
 }
 
+.views {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
 .logo {
   height: 35px;
   padding-right: 10px;
