--- a/src/App.css
+++ b/src/App.css
@@ -51,11 +51,28 @@
 }
 
 .views {
-  position: relative;
+  position: fixed;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: row;
+  background-color: black;
+}
+
+.volume {
+  position: relative;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.mpr {
+  position: relative;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .logo {
